<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2015 AVAST Software s.r.o.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_settings"
        android:title="@string/ab_menu_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/ab_menu_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_add_testing_ticket"
        android:title="@string/ab_menu_add_testing_ticket"
        app:showAsAction="never" />

</menu>
